# basic-interpreter

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  driver.hh  main.cpp  parser.y  scanner.l  tests.py
examples/: complex_usage.lol  hello_world.lol  logic_and_if_statements.lol  loops.lol  simple_arithmetic.lol  strings_and_concat.lol
include/: ast.hh  driver.hh  scanner.hh
src/: ast.cpp  driver.cpp  main.cpp
